--- a/public/index.ejs
+++ b/public/index.ejs
@@ -11,7 +11,7 @@
 <body style="background-color: rgb(22, 148, 47)">
     <script src="/socket.io/socket.io.js"></script>
     <script src="./main.js"></script>
-    
+    <script src="../routes/login.js"></script>
     <!--    
         
         validación de mail para envíar mensaje al chat, 
@@ -19,6 +19,9 @@
         <textarea class="form-control" rows="3"></textarea>
     -->
     <!-- Form productos -->
+    
+    <h1><%=username%></h1> 
+    
     <div style="background-color: rgb(60, 5, 23)" class="container-xxl ">
         <div class="row">
             <div class="col">
