--- a/public/index.ejs
+++ b/public/index.ejs
@@ -20,8 +20,12 @@
     -->
     <!-- Form productos -->
     
-    <h1><%=username%></h1> 
+    <h1>Bienvenido <%=username%>!</h1> 
+    <form action="/logout" method="get"><button class="btn btn-outline-danger"  type="submit">Logout</button></form>
     
+    
+
+
     <div style="background-color: rgb(60, 5, 23)" class="container-xxl ">
         <div class="row">
             <div class="col">
