--- a/public/index.ejs
+++ b/public/index.ejs
@@ -6,22 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Document</title>
-
 </head>
 <body style="background-color: rgb(22, 148, 47)">
     <script src="/socket.io/socket.io.js"></script>
     <script src="./main.js"></script>
     <script src="../routes/login.js"></script>
     <!--    
-        
         validación de mail para envíar mensaje al chat, 
         Recorrido del array donde se guarda la info 
         <textarea class="form-control" rows="3"></textarea>
     -->
     <!-- Form productos -->
-    
-    <h1>Bienvenido <%=username%>!</h1> 
-    <form action="/logout" method="get"><button class="btn btn-outline-danger"  type="submit">Logout</button></form>
+    <div class="container text-center text-dark">
+        <h1>Bienvenido <%=username%>!</h1> 
+        <form action="/logout" method="get"><button class="btn btn-outline-danger"  type="submit">Logout</button></form>
+    </div>
     
     
 
