--- a/public/logout.ejs
+++ b/public/logout.ejs
@@ -8,10 +8,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
-<body>
+<body class="container text-center">
     <h1>HASTA LUEGO <%=username%>!</h1>
-    
     <form action="/login" method="get"><button action="/login" class="btn btn-outline-info">Login</button></form>
-
 </body>
 </html>
