Ejemplo de passport

--- a/public/signin.ejs
+++ b/public/signin.ejs
@@ -11,9 +11,9 @@
 </head>
 <body class="bg-dark">
     <h1 class="text-warning container text-center">SignIn</h1>
-    <form class="container text-center text-warning border border-danger border-4 rounded">
+    <form method='post' action='/signin' class="container text-center text-warning border border-danger border-4 rounded">
         <div class="mb-3">
-            <label for="email" class="form-label" aria-placeholder="someone@example.com">Mail</label>
+            <label for="email" class="form-label">Mail</label>
             <input type="email" class="form-control" id="email" name="email" placeholder="someone@example.com">
         </div>
         <div class="mb-3">
