--- a/public/login.ejs
+++ b/public/login.ejs
@@ -11,7 +11,7 @@
 </head>
 <body class="bg-dark">
     <h1 class="text-info container text-center">LogIn</h1>
-    <form class="container text-center text-info border border-success border-4 rounded">
+    <form method='post' action='/login' class="container text-center text-info border border-success border-4 rounded">
         <div class="mb-3">
             <label for="username" class="form-label">Username</label>
             <input type="text" class="form-control" id="username" name="username" placeholder="Your username">
