--- a/public/login.ejs
+++ b/public/login.ejs
@@ -4,28 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
 </head>
 <body class="bg-dark">
-    <script src="../routes/loginFront.js"></script>
-    <form class="container text-center text-info" method="post">
-        <h1 >Log in</h1>
+    <h1 class="text-info container text-center">LogIn</h1>
+    <form method='post' action='/login' class="container text-center text-info border border-success border-4 rounded">
         <div class="mb-3">
-            <label  class="form-label">Mail:</label>
-            <input type="email" class="form-control" id="mail" name="mail" aria-describedby="emailHelp" name="username">
+            <label for="username" class="form-label">Username</label>
+            <input type="text" class="form-control" id="username" name="username" placeholder="Your username">
         </div>
-        
         <div class="mb-3">
-            <label  class="form-label">Contraseña:</label>
-            <input type="password" class="form-control" name="password" id="password" aria-describedby="emailHelp" name="username">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" class="form-control" id="password" name="password" placeholder="Your password">
         </div>
-        
-        
-        <button action="submit" class="btn btn-primary">Entrar</button>
-    </form>
-    <form action="/signin" method="get" class="container text-center text-info"><button action="/signin" class="btn btn-primary">Registrarse</button></form>
 
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 </body>
 </html>
