Entrega proyecto final 1

--- a/public/signIn.ejs
+++ b/public/signIn.ejs
@@ -4,28 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <title>Document</title>
 </head>
-<body class="bg-dark">
-    <h1 class="text-warning container text-center">SignIn</h1>
-    <form method='post' action='/signin' class="container text-center text-warning border border-danger border-4 rounded">
-        <div class="mb-3">
-            <label for="email" class="form-label">Mail</label>
-            <input type="email" class="form-control" id="email" name="email" placeholder="someone@example.com">
-        </div>
-        <div class="mb-3">
-            <label for="username" class="form-label">Username</label>
-            <input type="text" class="form-control" id="username" name="username" placeholder="Your Username">
-        </div>
-        <div class="mb-3">
-            <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="Your Password">
-        </div>
+<body class="text-info bg-dark bg-gradient container">
+    <!-- <script src="../routes/loginFront.js"></script> -->
+    <form class="text-center " method="post" action="/signin">
+        <div class="border border-info rounded">
+            <h1 >Sign in</h1>
+            <div class="mb-3">
+                <label  class="form-label">Ingresá tu Nombre:</label>
+                <input type="text" class="form-control" id="username" name="username">
+            </div>
 
-        <button type="submit" class="btn btn-primary">Submit</button>
+            <div class="mb-3">
+                <label  class="form-label">Ingresá un Mail:</label>
+                <input type="email" class="form-control" id="mail"  name="mail">
+            </div>
+
+            <div class="mb-3">
+                <label  class="form-label">Ingresá tu contraseña:</label>
+                <input type="password" class="form-control" id="password" name="password">
+            </div>
+            <div class="mb-3">
+                <label  class="form-label">Ingresá el nombre tu direccion:</label>
+                <input type="text" class="form-control" id="direccion" name="direccion">
+            </div>
+            <div class="mb-3">
+                <label  class="form-label">Ingresá el numero de tu direccion:</label>
+                <input type="number" class="form-control" id="direccionNum" name="direccionNum">
+            </div>
+        <div class="mb-3">
+            <label  class="form-label">Ingresá tu edad:</label>
+            <input type="number" class="form-control" id="edad"  name="edad">
+        </div>
+        <div class="mb-3">
+            <label  class="form-label">Ingresá tu telefono:</label>
+            <input type="number" class="form-control" id="tel" name="tel">
+        </div>
+        <div class="mb-3">
+            <label  class="form-label">Ingresá un link con tu foto:</label>
+            <input type="text" class="form-control" id="url" name="url">
+        </div>
+    </div>
+        <div class="m-3">
+            <button action="submit" class="btn btn-primary">Submit</button>
+            
+        </div>
     </form>
+    <form action="/login" method="get" class="text-center m-3"><button action="/login" class="btn btn-primary">Login</button></form>
+    
 </body>
 </html>
