--- a/public/kart.ejs
+++ b/public/kart.ejs
@@ -18,7 +18,8 @@
                     <% cart.forEach(item => { %>
 
                     <li>
-                        <%=item%>
+                        <%= item.product %>
+                        <%= item.price %>
                     </li>
 
                     <% }); %>
