--- a/public/login.ejs
+++ b/public/login.ejs
@@ -13,8 +13,8 @@
     <form class="container text-center text-info" method="post" action='/login'>
         <h1 >Log in</h1>
         <div class="mb-3">
-            <label  class="form-label">Mail:</label>
-            <input type="email" class="form-control" id="mail" name="mail">
+            <label  class="form-label">Username:</label>
+            <input type="text" class="form-control" id="username" name="username">
         </div>
         <div class="mb-3">
             <label  class="form-label">Contraseña:</label>
