--- a/public/home.ejs
+++ b/public/home.ejs
@@ -10,12 +10,16 @@
 
 <body style="background-color: rgb(22, 148, 47)">
     <script src="./js/home.js"></script>
-
+    <header>
+        <h1>
+            Airsoft shop
+        </h1>
+    </header>
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
         <a class="navbar-brand">Hola, <%= username%></a>
-        <form class="d-flex" action="/home/mykart">
-            <h5 class="m-2">0</h5>
+        <form class="d-flex" action="/carrito">
+            
             <button class="btn btn-dark" formmethod="get">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
                     <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
@@ -38,7 +42,7 @@
                             <h5 class="card-title"><%= item.title%> - US$<%= item.price%></h5>
                             <p class="card-text"><%= item.descripcion%></p>
 
-                            <form action="/home/addToKart">
+                            <form action="/carrito/addToKart">
                                 <input type="text" name="product" value="<%= item.title%>" hidden>
                                 <input type="number" name="price" value="<%= item.price%>" hidden>
                                 <button type="submit" class="btn btn-success" formmethod="post">Agregar al carrito</button>
