--- a/public/kart.ejs
+++ b/public/kart.ejs
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
+    
     <div>
         <% if(cart.length == 0) { %>
             <div class="alert alert-danger" role="alert">
@@ -18,16 +20,28 @@
                     <% cart.forEach(item => { %>
 
                     <li>
-                        <%= item.product %>
-                        <%= item.price %>
+                        <div>
+                            <%= item.product %>
+                            <%= item.price %>
+                        </div>
+
+                        <form action="carrito/deleteFromKart" method="post">
+                            <input type="text" name="product" value="<%= item.product %>" hidden>
+                            <button type="submit">Eliminar del carrito</button>
+                        </form>
                     </li>
 
                     <% }); %>
                 </ul>
         <% }%>
     </div>
+
+
     <form action="/home">
-        <button formmethod="get" class="btn btn-success">home</button>
+        <button formmethod="get" class="btn btn-warning">home</button>
+    </form>
+    <form action="carrito/comprarTodo" >
+        <button formmethod="post" class="btn btn-success">Comprar todos los items</button>
     </form>
 </body>
 </html>
