avances en la entrega final

--- a/public/kart.ejs
+++ b/public/kart.ejs
@@ -37,7 +37,7 @@
     </div>
 
 
-    <form action="/home">
+    <form action="/productos">
         <button formmethod="get" class="btn btn-warning">home</button>
     </form>
     <form action="carrito/comprarTodo" >
