--- a/public/login.ejs
+++ b/public/login.ejs
@@ -9,20 +9,17 @@
     <title>Document</title>
 </head>
 <body class="bg-dark">
-    <script src="../routes/loginFront.js"></script>
-    <form class="container text-center text-info" method="post">
+    
+    <form class="container text-center text-info" method="post" action='/login'>
         <h1 >Log in</h1>
         <div class="mb-3">
-            <label  class="form-label">Mail:</label>
-            <input type="email" class="form-control" id="mail" name="mail" aria-describedby="emailHelp" name="username">
+            <label  class="form-label">Username:</label>
+            <input type="text" class="form-control" id="username" name="username">
         </div>
-        
         <div class="mb-3">
             <label  class="form-label">Contraseña:</label>
-            <input type="password" class="form-control" name="password" id="password" aria-describedby="emailHelp" name="username">
+            <input type="password" class="form-control" name="password" id="password">
         </div>
-        
-        
         <button action="submit" class="btn btn-primary">Entrar</button>
     </form>
     <form action="/signin" method="get" class="container text-center text-info"><button action="/signin" class="btn btn-primary">Registrarse</button></form>
