--- a/public/signIn.ejs
+++ b/public/signIn.ejs
@@ -10,30 +10,50 @@
 </head>
 <body class="text-info bg-dark bg-gradient container">
     <!-- <script src="../routes/loginFront.js"></script> -->
-    <form class="text-center " method="post">
+    <form class="text-center " method="post" action="/signin">
         <div class="border border-info rounded">
             <h1 >Sign in</h1>
             <div class="mb-3">
                 <label  class="form-label">Ingresá tu Nombre:</label>
-                <input type="text" class="form-control" id="username" aria-describedby="emailHelp" name="username">
+                <input type="text" class="form-control" id="username" name="username">
             </div>
 
             <div class="mb-3">
                 <label  class="form-label">Ingresá un Mail:</label>
-                <input type="email" class="form-control" id="mail" aria-describedby="emailHelp" name="mail">
+                <input type="email" class="form-control" id="mail"  name="mail">
             </div>
 
             <div class="mb-3">
                 <label  class="form-label">Ingresá tu contraseña:</label>
-                <input type="password" class="form-control" id="password" aria-describedby="emailHelp" name="password">
+                <input type="password" class="form-control" id="password" name="password">
+            </div>
+            <div class="mb-3">
+                <label  class="form-label">Ingresá el nombre tu direccion:</label>
+                <input type="text" class="form-control" id="direccion" name="direccion">
+            </div>
+            <div class="mb-3">
+                <label  class="form-label">Ingresá el numero de tu direccion:</label>
+                <input type="number" class="form-control" id="direccionNum" name="direccionNum">
+            </div>
+            <div class="mb-3">
+                <label  class="form-label">Ingresá tu edad:</label>
+                <input type="number" class="form-control" id="edad"  name="edad">
+            </div>
+            <div class="mb-3">
+                <label  class="form-label">Ingresá tu telefono:</label>
+                <input type="number" class="form-control" id="tel" name="tel">
+            </div>
+            <div class="mb-3">
+                <label  class="form-label">Ingresá un link con tu foto:</label>
+                <input type="text" class="form-control" id="url" name="url">
             </div>
         </div>
-        <div>
+        <div class="m-3">
             <button action="submit" class="btn btn-primary">Submit</button>
             
         </div>
     </form>
-    <form action="/login" method="get" class="text-center"><button action="/login" class="btn btn-primary">Login</button></form>
+    <form action="/login" method="get" class="text-center m-3"><button action="/login" class="btn btn-primary">Login</button></form>
     
 </body>
 </html>
